// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.traffic.v0;

import "com/digitalasset/canton/domain/api/v0/sequencer_service.proto";
import "google/protobuf/timestamp.proto";

// Full traffic status for a member at a point in time
message MemberTrafficStatus {
  // Represents a top up event valid from a certain timestamp
  message TopUpEvent {
    // Timestamp at which the top up becomes valid (inclusive)
    google.protobuf.Timestamp effective_at = 1;
    // Topology transaction serial id that is used to discriminate between top ups with the same effective_at, which is possible
    uint32 serial = 2;
    // Traffic limit of the top up
    uint64 extra_traffic_limit = 3;
  }

  // Member the status is about
  string member = 1;
  // Traffic state of the member, contains the timestamp at which this status is valid
  com.digitalasset.canton.domain.api.v0.SequencedEventTrafficState traffic_state = 2;
  // Current and future top up events that have been registered but are not necessarily active yet
  repeated TopUpEvent top_up_events = 3;
  // Timestamp at which the status is valid
  google.protobuf.Timestamp ts = 4;
}
